--- a/src/about.html
+++ b/src/about.html
@@ -21,7 +21,7 @@
 					<a class="nav__link" href="#">contacts</a>
 					<a class="nav__link" href="#">service</a>
 				</nav>
-				<button class="header__btn" type="button">request a project</button>
+				<button class="header__btn" type="button" data-modal="request">request a project</button>
 				<button class="header__burger burger-btn">
 					<span></span>
 					<span></span>
@@ -608,6 +608,7 @@
 			<include src="./components/footer.html"></include>
 		</div>
 	</div>
+	<include src="./components/request-modal.html"></include>
 </body>
 
 </html>
