--- a/src/main-map.html
+++ b/src/main-map.html
@@ -65,9 +65,17 @@
 							<div class="main-projects__content-left">
 								<a class="main-projects__content-item" href="./project-detail.html">
 									<img src="./assets/images/main/main-5.webp" alt="">
+									<div class="main-projects__content-item--text">
+										<span>USM SPIEF</span>
+										<span>2022</span>
+									</div>
 								</a>
 								<a class="main-projects__content-item" href="./project-detail.html">
 									<img src="./assets/images/main/main-6.webp" alt="">
+									<div class="main-projects__content-item--text">
+										<span>USM SPIEF</span>
+										<span>2022</span>
+									</div>
 								</a>
 								<a class="main-projects__content-item" href="./project-detail.html">
 									<video loop preload="auto" muted>
@@ -75,16 +83,32 @@
 										<source src="./assets/video/main-video.webm" type="video/webm">
 									</video>
 									<img src="./assets/images/main/main-7.webp" alt="">
+									<div class="main-projects__content-item--text">
+										<span>USM SPIEF</span>
+										<span>2022</span>
+									</div>
 								</a>
 								<a class="main-projects__content-item" href="./project-detail.html">
 									<img src="./assets/images/main/main-8.webp" alt="">
+									<div class="main-projects__content-item--text">
+										<span>USM SPIEF</span>
+										<span>2022</span>
+									</div>
 								</a>
 								<div class="main-projects__content-hidden">
 									<a class="main-projects__content-item" href="./project-detail.html">
 										<img src="./assets/images/main/main-5.webp" alt="">
+										<div class="main-projects__content-item--text">
+											<span>USM SPIEF</span>
+											<span>2022</span>
+										</div>
 									</a>
 									<a class="main-projects__content-item" href="./project-detail.html">
 										<img src="./assets/images/main/main-6.webp" alt="">
+										<div class="main-projects__content-item--text">
+											<span>USM SPIEF</span>
+											<span>2022</span>
+										</div>
 									</a>
 									<a class="main-projects__content-item" href="./project-detail.html">
 										<video loop preload="auto" muted>
@@ -92,9 +116,17 @@
 											<source src="./assets/video/main-video.webm" type="video/webm">
 										</video>
 										<img src="./assets/images/main/main-7.webp" alt="">
+										<div class="main-projects__content-item--text">
+											<span>USM SPIEF</span>
+											<span>2022</span>
+										</div>
 									</a>
 									<a class="main-projects__content-item" href="./project-detail.html">
 										<img src="./assets/images/main/main-8.webp" alt="">
+										<div class="main-projects__content-item--text">
+											<span>USM SPIEF</span>
+											<span>2022</span>
+										</div>
 									</a>
 								</div>
 								<div class="main-projects__content-item--null desktop">
@@ -105,6 +137,10 @@
 							<div class="main-projects__content-right">
 								<a class="main-projects__content-item" href="./project-detail.html">
 									<img src="./assets/images/main/main-1.webp" alt="">
+									<div class="main-projects__content-item--text">
+										<span>USM SPIEF</span>
+										<span>2022</span>
+									</div>
 								</a>
 								<a class="main-projects__content-item" href="./project-detail.html">
 									<video loop preload="auto" muted>
@@ -112,16 +148,32 @@
 										<source src="./assets/video/main-video.webm" type="video/webm">
 									</video>
 									<img src="./assets/images/main/main-2.webp" alt="">
+									<div class="main-projects__content-item--text">
+										<span>USM SPIEF</span>
+										<span>2022</span>
+									</div>
 								</a>
 								<a class="main-projects__content-item" href="./project-detail.html">
 									<img src="./assets/images/main/main-3.webp" alt="">
+									<div class="main-projects__content-item--text">
+										<span>USM SPIEF</span>
+										<span>2022</span>
+									</div>
 								</a>
 								<a class="main-projects__content-item" href="./project-detail.html">
 									<img src="./assets/images/main/main-4.webp" alt="">
+									<div class="main-projects__content-item--text">
+										<span>USM SPIEF</span>
+										<span>2022</span>
+									</div>
 								</a>
 								<div class="main-projects__content-hidden">
 									<a class="main-projects__content-item" href="./project-detail.html">
 										<img src="./assets/images/main/main-1.webp" alt="">
+										<div class="main-projects__content-item--text">
+											<span>USM SPIEF</span>
+											<span>2022</span>
+										</div>
 									</a>
 									<a class="main-projects__content-item" href="./project-detail.html">
 										<video loop preload="auto" muted>
@@ -129,21 +181,41 @@
 											<source src="./assets/video/main-video.webm" type="video/webm">
 										</video>
 										<img src="./assets/images/main/main-2.webp" alt="">
+										<div class="main-projects__content-item--text">
+											<span>USM SPIEF</span>
+											<span>2022</span>
+										</div>
 									</a>
 									<a class="main-projects__content-item" href="./project-detail.html">
 										<img src="./assets/images/main/main-3.webp" alt="">
+										<div class="main-projects__content-item--text">
+											<span>USM SPIEF</span>
+											<span>2022</span>
+										</div>
 									</a>
 									<a class="main-projects__content-item" href="./project-detail.html">
 										<img src="./assets/images/main/main-4.webp" alt="">
+										<div class="main-projects__content-item--text">
+											<span>USM SPIEF</span>
+											<span>2022</span>
+										</div>
 									</a>
 								</div>
 							</div>
 							<div class="main-projects__content-hidden--mobile">
 								<a class="main-projects__content-item" href="./project-detail.html">
 									<img src="./assets/images/main/main-5.webp" alt="">
+									<div class="main-projects__content-item--text">
+										<span>USM SPIEF</span>
+										<span>2022</span>
+									</div>
 								</a>
 								<a class="main-projects__content-item" href="./project-detail.html">
 									<img src="./assets/images/main/main-6.webp" alt="">
+									<div class="main-projects__content-item--text">
+										<span>USM SPIEF</span>
+										<span>2022</span>
+									</div>
 								</a>
 								<a class="main-projects__content-item" href="./project-detail.html">
 									<video loop preload="auto" muted>
@@ -151,12 +223,24 @@
 										<source src="./assets/video/main-video.webm" type="video/webm">
 									</video>
 									<img src="./assets/images/main/main-7.webp" alt="">
+									<div class="main-projects__content-item--text">
+										<span>USM SPIEF</span>
+										<span>2022</span>
+									</div>
 								</a>
 								<a class="main-projects__content-item" href="./project-detail.html">
 									<img src="./assets/images/main/main-8.webp" alt="">
+									<div class="main-projects__content-item--text">
+										<span>USM SPIEF</span>
+										<span>2022</span>
+									</div>
 								</a>
 								<a class="main-projects__content-item" href="./project-detail.html">
 									<img src="./assets/images/main/main-1.webp" alt="">
+									<div class="main-projects__content-item--text">
+										<span>USM SPIEF</span>
+										<span>2022</span>
+									</div>
 								</a>
 								<a class="main-projects__content-item" href="./project-detail.html">
 									<video loop preload="auto" muted>
@@ -164,12 +248,24 @@
 										<source src="./assets/video/main-video.webm" type="video/webm">
 									</video>
 									<img src="./assets/images/main/main-2.webp" alt="">
+									<div class="main-projects__content-item--text">
+										<span>USM SPIEF</span>
+										<span>2022</span>
+									</div>
 								</a>
 								<a class="main-projects__content-item" href="./project-detail.html">
 									<img src="./assets/images/main/main-3.webp" alt="">
+									<div class="main-projects__content-item--text">
+										<span>USM SPIEF</span>
+										<span>2022</span>
+									</div>
 								</a>
 								<a class="main-projects__content-item" href="./project-detail.html">
 									<img src="./assets/images/main/main-4.webp" alt="">
+									<div class="main-projects__content-item--text">
+										<span>USM SPIEF</span>
+										<span>2022</span>
+									</div>
 								</a>
 							</div>
 							<div class="main-projects__content-item--null mobile">
@@ -395,6 +491,7 @@
 			<include src="./components/footer.html"></include>
 		</div>
 	</div>
+	<include src="./components/request-modal.html"></include>
 	<!-- V V V Добавить если нужна карта в контактах V V V -->
 	<script src="https://api-maps.yandex.ru/v3/?apikey=ffac2b37-9f44-43d8-8e3e-92f15073c2d1&lang=ru_RU"></script>
 	<script>
