--- a/src/project-detail.html
+++ b/src/project-detail.html
@@ -312,6 +312,7 @@
 			<include src="./components/footer.html"></include>
 		</div>
 	</div>
+	<include src="./components/request-modal.html"></include>
 	<script src="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.umd.js"></script>
 	<script>
 		Fancybox.bind(`[data-fancybox="gallery"]`, {
