--- a/src/service-detail-text.html
+++ b/src/service-detail-text.html
@@ -21,7 +21,7 @@
 					<a class="nav__link" href="#">contacts</a>
 					<a class="nav__link" href="#">service</a>
 				</nav>
-				<button class="header__btn" type="button">request a project</button>
+				<button class="header__btn" type="button" data-modal="request">request a project</button>
 				<button class="header__burger burger-btn">
 					<span></span>
 					<span></span>
@@ -182,9 +182,17 @@
 								<div class="services-cases__content-left">
 									<a class="services-cases__content-item" href="./project-detail.html">
 										<img src="./assets/images/main/main-5.webp" alt="">
+										<div class="services-cases__content-item--text">
+											<span>USM SPIEF</span>
+											<span>2022</span>
+										</div>
 									</a>
 									<a class="services-cases__content-item" href="./project-detail.html">
 										<img src="./assets/images/main/main-6.webp" alt="">
+										<div class="services-cases__content-item--text">
+											<span>USM SPIEF</span>
+											<span>2022</span>
+										</div>
 									</a>
 									<a class="services-cases__content-item" href="./project-detail.html">
 										<video loop preload="auto" muted>
@@ -192,16 +200,32 @@
 											<source src="./assets/video/main-video.webm" type="video/webm">
 										</video>
 										<img src="./assets/images/main/main-7.webp" alt="">
+										<div class="services-cases__content-item--text">
+											<span>USM SPIEF</span>
+											<span>2022</span>
+										</div>
 									</a>
 									<a class="services-cases__content-item" href="./project-detail.html">
 										<img src="./assets/images/main/main-8.webp" alt="">
+										<div class="services-cases__content-item--text">
+											<span>USM SPIEF</span>
+											<span>2022</span>
+										</div>
 									</a>
 									<div class="services-cases__content-hidden">
 										<a class="services-cases__content-item" href="./project-detail.html">
 											<img src="./assets/images/main/main-5.webp" alt="">
+											<div class="services-cases__content-item--text">
+												<span>USM SPIEF</span>
+												<span>2022</span>
+											</div>
 										</a>
 										<a class="services-cases__content-item" href="./project-detail.html">
 											<img src="./assets/images/main/main-6.webp" alt="">
+											<div class="services-cases__content-item--text">
+												<span>USM SPIEF</span>
+												<span>2022</span>
+											</div>
 										</a>
 										<a class="services-cases__content-item" href="./project-detail.html">
 											<video loop preload="auto" muted>
@@ -209,9 +233,17 @@
 												<source src="./assets/video/main-video.webm" type="video/webm">
 											</video>
 											<img src="./assets/images/main/main-7.webp" alt="">
+											<div class="services-cases__content-item--text">
+												<span>USM SPIEF</span>
+												<span>2022</span>
+											</div>
 										</a>
 										<a class="services-cases__content-item" href="./project-detail.html">
 											<img src="./assets/images/main/main-8.webp" alt="">
+											<div class="services-cases__content-item--text">
+												<span>USM SPIEF</span>
+												<span>2022</span>
+											</div>
 										</a>
 									</div>
 									<div class="services-cases__content-item--null desktop">
@@ -222,6 +254,10 @@
 								<div class="services-cases__content-right">
 									<a class="services-cases__content-item" href="./project-detail.html">
 										<img src="./assets/images/main/main-1.webp" alt="">
+										<div class="services-cases__content-item--text">
+											<span>USM SPIEF</span>
+											<span>2022</span>
+										</div>
 									</a>
 									<a class="services-cases__content-item" href="./project-detail.html">
 										<video loop preload="auto" muted>
@@ -229,16 +265,32 @@
 											<source src="./assets/video/main-video.webm" type="video/webm">
 										</video>
 										<img src="./assets/images/main/main-2.webp" alt="">
+										<div class="services-cases__content-item--text">
+											<span>USM SPIEF</span>
+											<span>2022</span>
+										</div>
 									</a>
 									<a class="services-cases__content-item" href="./project-detail.html">
 										<img src="./assets/images/main/main-3.webp" alt="">
+										<div class="services-cases__content-item--text">
+											<span>USM SPIEF</span>
+											<span>2022</span>
+										</div>
 									</a>
 									<a class="services-cases__content-item" href="./project-detail.html">
 										<img src="./assets/images/main/main-4.webp" alt="">
+										<div class="services-cases__content-item--text">
+											<span>USM SPIEF</span>
+											<span>2022</span>
+										</div>
 									</a>
 									<div class="services-cases__content-hidden">
 										<a class="services-cases__content-item" href="./project-detail.html">
 											<img src="./assets/images/main/main-1.webp" alt="">
+											<div class="services-cases__content-item--text">
+												<span>USM SPIEF</span>
+												<span>2022</span>
+											</div>
 										</a>
 										<a class="services-cases__content-item" href="./project-detail.html">
 											<video loop preload="auto" muted>
@@ -246,21 +298,41 @@
 												<source src="./assets/video/main-video.webm" type="video/webm">
 											</video>
 											<img src="./assets/images/main/main-2.webp" alt="">
+											<div class="services-cases__content-item--text">
+												<span>USM SPIEF</span>
+												<span>2022</span>
+											</div>
 										</a>
 										<a class="services-cases__content-item" href="./project-detail.html">
 											<img src="./assets/images/main/main-3.webp" alt="">
+											<div class="services-cases__content-item--text">
+												<span>USM SPIEF</span>
+												<span>2022</span>
+											</div>
 										</a>
 										<a class="services-cases__content-item" href="./project-detail.html">
 											<img src="./assets/images/main/main-4.webp" alt="">
+											<div class="services-cases__content-item--text">
+												<span>USM SPIEF</span>
+												<span>2022</span>
+											</div>
 										</a>
 									</div>
 								</div>
 								<div class="services-cases__content-hidden--mobile">
 									<a class="services-cases__content-item" href="./project-detail.html">
 										<img src="./assets/images/main/main-5.webp" alt="">
+										<div class="services-cases__content-item--text">
+											<span>USM SPIEF</span>
+											<span>2022</span>
+										</div>
 									</a>
 									<a class="services-cases__content-item" href="./project-detail.html">
 										<img src="./assets/images/main/main-6.webp" alt="">
+										<div class="services-cases__content-item--text">
+											<span>USM SPIEF</span>
+											<span>2022</span>
+										</div>
 									</a>
 									<a class="services-cases__content-item" href="./project-detail.html">
 										<video loop preload="auto" muted>
@@ -268,12 +340,24 @@
 											<source src="./assets/video/main-video.webm" type="video/webm">
 										</video>
 										<img src="./assets/images/main/main-7.webp" alt="">
+										<div class="services-cases__content-item--text">
+											<span>USM SPIEF</span>
+											<span>2022</span>
+										</div>
 									</a>
 									<a class="services-cases__content-item" href="./project-detail.html">
 										<img src="./assets/images/main/main-8.webp" alt="">
+										<div class="services-cases__content-item--text">
+											<span>USM SPIEF</span>
+											<span>2022</span>
+										</div>
 									</a>
 									<a class="services-cases__content-item" href="./project-detail.html">
 										<img src="./assets/images/main/main-1.webp" alt="">
+										<div class="services-cases__content-item--text">
+											<span>USM SPIEF</span>
+											<span>2022</span>
+										</div>
 									</a>
 									<a class="services-cases__content-item" href="./project-detail.html">
 										<video loop preload="auto" muted>
@@ -281,12 +365,24 @@
 											<source src="./assets/video/main-video.webm" type="video/webm">
 										</video>
 										<img src="./assets/images/main/main-2.webp" alt="">
+										<div class="services-cases__content-item--text">
+											<span>USM SPIEF</span>
+											<span>2022</span>
+										</div>
 									</a>
 									<a class="services-cases__content-item" href="./project-detail.html">
 										<img src="./assets/images/main/main-3.webp" alt="">
+										<div class="services-cases__content-item--text">
+											<span>USM SPIEF</span>
+											<span>2022</span>
+										</div>
 									</a>
 									<a class="services-cases__content-item" href="./project-detail.html">
 										<img src="./assets/images/main/main-4.webp" alt="">
+										<div class="services-cases__content-item--text">
+											<span>USM SPIEF</span>
+											<span>2022</span>
+										</div>
 									</a>
 								</div>
 								<div class="services-cases__content-item--null mobile">
@@ -301,6 +397,7 @@
 			<include src="./components/footer.html"></include>
 		</div>
 	</div>
+	<include src="./components/request-modal.html"></include>
 </body>
 
 </html>
