--- a/src/service-detail.html
+++ b/src/service-detail.html
@@ -21,7 +21,7 @@
 					<a class="nav__link" href="#">contacts</a>
 					<a class="nav__link" href="#">service</a>
 				</nav>
-				<button class="header__btn" type="button">request a project</button>
+				<button class="header__btn" type="button" data-modal="request">request a project</button>
 				<button class="header__burger burger-btn">
 					<span></span>
 					<span></span>
@@ -192,9 +192,17 @@
 								<div class="services-cases__content-left">
 									<a class="services-cases__content-item" href="./project-detail.html">
 										<img src="./assets/images/main/main-5.webp" alt="">
+										<div class="services-cases__content-item--text">
+											<span>USM SPIEF</span>
+											<span>2022</span>
+										</div>
 									</a>
 									<a class="services-cases__content-item" href="./project-detail.html">
 										<img src="./assets/images/main/main-6.webp" alt="">
+										<div class="services-cases__content-item--text">
+											<span>USM SPIEF</span>
+											<span>2022</span>
+										</div>
 									</a>
 									<a class="services-cases__content-item" href="./project-detail.html">
 										<video loop preload="auto" muted>
@@ -202,16 +210,32 @@
 											<source src="./assets/video/main-video.webm" type="video/webm">
 										</video>
 										<img src="./assets/images/main/main-7.webp" alt="">
+										<div class="services-cases__content-item--text">
+											<span>USM SPIEF</span>
+											<span>2022</span>
+										</div>
 									</a>
 									<a class="services-cases__content-item" href="./project-detail.html">
 										<img src="./assets/images/main/main-8.webp" alt="">
+										<div class="services-cases__content-item--text">
+											<span>USM SPIEF</span>
+											<span>2022</span>
+										</div>
 									</a>
 									<div class="services-cases__content-hidden">
 										<a class="services-cases__content-item" href="./project-detail.html">
 											<img src="./assets/images/main/main-5.webp" alt="">
+											<div class="services-cases__content-item--text">
+												<span>USM SPIEF</span>
+												<span>2022</span>
+											</div>
 										</a>
 										<a class="services-cases__content-item" href="./project-detail.html">
 											<img src="./assets/images/main/main-6.webp" alt="">
+											<div class="services-cases__content-item--text">
+												<span>USM SPIEF</span>
+												<span>2022</span>
+											</div>
 										</a>
 										<a class="services-cases__content-item" href="./project-detail.html">
 											<video loop preload="auto" muted>
@@ -219,9 +243,17 @@
 												<source src="./assets/video/main-video.webm" type="video/webm">
 											</video>
 											<img src="./assets/images/main/main-7.webp" alt="">
+											<div class="services-cases__content-item--text">
+												<span>USM SPIEF</span>
+												<span>2022</span>
+											</div>
 										</a>
 										<a class="services-cases__content-item" href="./project-detail.html">
 											<img src="./assets/images/main/main-8.webp" alt="">
+											<div class="services-cases__content-item--text">
+												<span>USM SPIEF</span>
+												<span>2022</span>
+											</div>
 										</a>
 									</div>
 									<div class="services-cases__content-item--null desktop">
@@ -232,6 +264,10 @@
 								<div class="services-cases__content-right">
 									<a class="services-cases__content-item" href="./project-detail.html">
 										<img src="./assets/images/main/main-1.webp" alt="">
+										<div class="services-cases__content-item--text">
+											<span>USM SPIEF</span>
+											<span>2022</span>
+										</div>
 									</a>
 									<a class="services-cases__content-item" href="./project-detail.html">
 										<video loop preload="auto" muted>
@@ -239,16 +275,32 @@
 											<source src="./assets/video/main-video.webm" type="video/webm">
 										</video>
 										<img src="./assets/images/main/main-2.webp" alt="">
+										<div class="services-cases__content-item--text">
+											<span>USM SPIEF</span>
+											<span>2022</span>
+										</div>
 									</a>
 									<a class="services-cases__content-item" href="./project-detail.html">
 										<img src="./assets/images/main/main-3.webp" alt="">
+										<div class="services-cases__content-item--text">
+											<span>USM SPIEF</span>
+											<span>2022</span>
+										</div>
 									</a>
 									<a class="services-cases__content-item" href="./project-detail.html">
 										<img src="./assets/images/main/main-4.webp" alt="">
+										<div class="services-cases__content-item--text">
+											<span>USM SPIEF</span>
+											<span>2022</span>
+										</div>
 									</a>
 									<div class="services-cases__content-hidden">
 										<a class="services-cases__content-item" href="./project-detail.html">
 											<img src="./assets/images/main/main-1.webp" alt="">
+											<div class="services-cases__content-item--text">
+												<span>USM SPIEF</span>
+												<span>2022</span>
+											</div>
 										</a>
 										<a class="services-cases__content-item" href="./project-detail.html">
 											<video loop preload="auto" muted>
@@ -256,21 +308,41 @@
 												<source src="./assets/video/main-video.webm" type="video/webm">
 											</video>
 											<img src="./assets/images/main/main-2.webp" alt="">
+											<div class="services-cases__content-item--text">
+												<span>USM SPIEF</span>
+												<span>2022</span>
+											</div>
 										</a>
 										<a class="services-cases__content-item" href="./project-detail.html">
 											<img src="./assets/images/main/main-3.webp" alt="">
+											<div class="services-cases__content-item--text">
+												<span>USM SPIEF</span>
+												<span>2022</span>
+											</div>
 										</a>
 										<a class="services-cases__content-item" href="./project-detail.html">
 											<img src="./assets/images/main/main-4.webp" alt="">
+											<div class="services-cases__content-item--text">
+												<span>USM SPIEF</span>
+												<span>2022</span>
+											</div>
 										</a>
 									</div>
 								</div>
 								<div class="services-cases__content-hidden--mobile">
 									<a class="services-cases__content-item" href="./project-detail.html">
 										<img src="./assets/images/main/main-5.webp" alt="">
+										<div class="services-cases__content-item--text">
+											<span>USM SPIEF</span>
+											<span>2022</span>
+										</div>
 									</a>
 									<a class="services-cases__content-item" href="./project-detail.html">
 										<img src="./assets/images/main/main-6.webp" alt="">
+										<div class="services-cases__content-item--text">
+											<span>USM SPIEF</span>
+											<span>2022</span>
+										</div>
 									</a>
 									<a class="services-cases__content-item" href="./project-detail.html">
 										<video loop preload="auto" muted>
@@ -278,12 +350,24 @@
 											<source src="./assets/video/main-video.webm" type="video/webm">
 										</video>
 										<img src="./assets/images/main/main-7.webp" alt="">
+										<div class="services-cases__content-item--text">
+											<span>USM SPIEF</span>
+											<span>2022</span>
+										</div>
 									</a>
 									<a class="services-cases__content-item" href="./project-detail.html">
 										<img src="./assets/images/main/main-8.webp" alt="">
+										<div class="services-cases__content-item--text">
+											<span>USM SPIEF</span>
+											<span>2022</span>
+										</div>
 									</a>
 									<a class="services-cases__content-item" href="./project-detail.html">
 										<img src="./assets/images/main/main-1.webp" alt="">
+										<div class="services-cases__content-item--text">
+											<span>USM SPIEF</span>
+											<span>2022</span>
+										</div>
 									</a>
 									<a class="services-cases__content-item" href="./project-detail.html">
 										<video loop preload="auto" muted>
@@ -291,12 +375,24 @@
 											<source src="./assets/video/main-video.webm" type="video/webm">
 										</video>
 										<img src="./assets/images/main/main-2.webp" alt="">
+										<div class="services-cases__content-item--text">
+											<span>USM SPIEF</span>
+											<span>2022</span>
+										</div>
 									</a>
 									<a class="services-cases__content-item" href="./project-detail.html">
 										<img src="./assets/images/main/main-3.webp" alt="">
+										<div class="services-cases__content-item--text">
+											<span>USM SPIEF</span>
+											<span>2022</span>
+										</div>
 									</a>
 									<a class="services-cases__content-item" href="./project-detail.html">
 										<img src="./assets/images/main/main-4.webp" alt="">
+										<div class="services-cases__content-item--text">
+											<span>USM SPIEF</span>
+											<span>2022</span>
+										</div>
 									</a>
 								</div>
 								<div class="services-cases__content-item--null mobile">
@@ -311,6 +407,7 @@
 			<include src="./components/footer.html"></include>
 		</div>
 	</div>
+	<include src="./components/request-modal.html"></include>
 </body>
 
 </html>
