feat: modal mobile

--- a/src/404.html
+++ b/src/404.html
@@ -35,7 +35,7 @@
 							<a class="nav__link" href="#">contacts</a>
 							<a class="nav__link" href="#">service</a>
 						</nav>
-						<button class="burger-menu__btn" type="button">request a project</button>
+						<button class="burger-menu__btn" type="button" data-modal="request">request a project</button>
 						<div class="burger-menu__overlay burger-menu-overlay"></div>
 					</div>
 				</div>
