--- a/src/service-detail-text.html
+++ b/src/service-detail-text.html
@@ -195,7 +195,7 @@
 										</div>
 									</a>
 									<a class="services-cases__content-item" href="./project-detail.html">
-										<video loop preload="auto" muted>
+										<video loop preload="auto" muted playsinline>
 											<source src="./assets/video/main-video.mp4" type="video/mp4">
 											<source src="./assets/video/main-video.webm" type="video/webm">
 										</video>
@@ -228,7 +228,7 @@
 											</div>
 										</a>
 										<a class="services-cases__content-item" href="./project-detail.html">
-											<video loop preload="auto" muted>
+											<video loop preload="auto" muted playsinline>
 												<source src="./assets/video/main-video.mp4" type="video/mp4">
 												<source src="./assets/video/main-video.webm" type="video/webm">
 											</video>
@@ -260,7 +260,7 @@
 										</div>
 									</a>
 									<a class="services-cases__content-item" href="./project-detail.html">
-										<video loop preload="auto" muted>
+										<video loop preload="auto" muted playsinline>
 											<source src="./assets/video/main-video.mp4" type="video/mp4">
 											<source src="./assets/video/main-video.webm" type="video/webm">
 										</video>
@@ -293,7 +293,7 @@
 											</div>
 										</a>
 										<a class="services-cases__content-item" href="./project-detail.html">
-											<video loop preload="auto" muted>
+											<video loop preload="auto" muted playsinline>
 												<source src="./assets/video/main-video.mp4" type="video/mp4">
 												<source src="./assets/video/main-video.webm" type="video/webm">
 											</video>
@@ -335,7 +335,7 @@
 										</div>
 									</a>
 									<a class="services-cases__content-item" href="./project-detail.html">
-										<video loop preload="auto" muted>
+										<video loop preload="auto" muted playsinline>
 											<source src="./assets/video/main-video.mp4" type="video/mp4">
 											<source src="./assets/video/main-video.webm" type="video/webm">
 										</video>
@@ -360,7 +360,7 @@
 										</div>
 									</a>
 									<a class="services-cases__content-item" href="./project-detail.html">
-										<video loop preload="auto" muted>
+										<video loop preload="auto" muted playsinline>
 											<source src="./assets/video/main-video.mp4" type="video/mp4">
 											<source src="./assets/video/main-video.webm" type="video/webm">
 										</video>
