--- a/src/main-map.html
+++ b/src/main-map.html
@@ -78,7 +78,7 @@
 									</div>
 								</a>
 								<a class="main-projects__content-item" href="./project-detail.html">
-									<video loop preload="auto" muted playsinline>
+									<video loop preload="auto" muted playsinline autoplay>
 										<source src="./assets/video/main-video.mp4" type="video/mp4">
 										<source src="./assets/video/main-video.webm" type="video/webm">
 									</video>
@@ -111,7 +111,7 @@
 										</div>
 									</a>
 									<a class="main-projects__content-item" href="./project-detail.html">
-										<video loop preload="auto" muted playsinline>
+										<video loop preload="auto" muted playsinline autoplay>
 											<source src="./assets/video/main-video.mp4" type="video/mp4">
 											<source src="./assets/video/main-video.webm" type="video/webm">
 										</video>
@@ -143,7 +143,7 @@
 									</div>
 								</a>
 								<a class="main-projects__content-item" href="./project-detail.html">
-									<video loop preload="auto" muted playsinline>
+									<video loop preload="auto" muted playsinline autoplay>
 										<source src="./assets/video/main-video.mp4" type="video/mp4">
 										<source src="./assets/video/main-video.webm" type="video/webm">
 									</video>
@@ -176,7 +176,7 @@
 										</div>
 									</a>
 									<a class="main-projects__content-item" href="./project-detail.html">
-										<video loop preload="auto" muted playsinline>
+										<video loop preload="auto" muted playsinline autoplay>
 											<source src="./assets/video/main-video.mp4" type="video/mp4">
 											<source src="./assets/video/main-video.webm" type="video/webm">
 										</video>
@@ -218,7 +218,7 @@
 									</div>
 								</a>
 								<a class="main-projects__content-item" href="./project-detail.html">
-									<video loop preload="auto" muted playsinline>
+									<video loop preload="auto" muted playsinline autoplay>
 										<source src="./assets/video/main-video.mp4" type="video/mp4">
 										<source src="./assets/video/main-video.webm" type="video/webm">
 									</video>
@@ -243,7 +243,7 @@
 									</div>
 								</a>
 								<a class="main-projects__content-item" href="./project-detail.html">
-									<video loop preload="auto" muted playsinline>
+									<video loop preload="auto" muted playsinline autoplay>
 										<source src="./assets/video/main-video.mp4" type="video/mp4">
 										<source src="./assets/video/main-video.webm" type="video/webm">
 									</video>
