--- a/src/service-detail.html
+++ b/src/service-detail.html
@@ -205,7 +205,7 @@
 										</div>
 									</a>
 									<a class="services-cases__content-item" href="./project-detail.html">
-										<video loop preload="auto" muted playsinline>
+										<video loop preload="auto" muted playsinline autoplay>
 											<source src="./assets/video/main-video.mp4" type="video/mp4">
 											<source src="./assets/video/main-video.webm" type="video/webm">
 										</video>
@@ -238,7 +238,7 @@
 											</div>
 										</a>
 										<a class="services-cases__content-item" href="./project-detail.html">
-											<video loop preload="auto" muted playsinline>
+											<video loop preload="auto" muted playsinline autoplay>
 												<source src="./assets/video/main-video.mp4" type="video/mp4">
 												<source src="./assets/video/main-video.webm" type="video/webm">
 											</video>
@@ -270,7 +270,7 @@
 										</div>
 									</a>
 									<a class="services-cases__content-item" href="./project-detail.html">
-										<video loop preload="auto" muted playsinline>
+										<video loop preload="auto" muted playsinline autoplay>
 											<source src="./assets/video/main-video.mp4" type="video/mp4">
 											<source src="./assets/video/main-video.webm" type="video/webm">
 										</video>
@@ -303,7 +303,7 @@
 											</div>
 										</a>
 										<a class="services-cases__content-item" href="./project-detail.html">
-											<video loop preload="auto" muted playsinline>
+											<video loop preload="auto" muted playsinline autoplay>
 												<source src="./assets/video/main-video.mp4" type="video/mp4">
 												<source src="./assets/video/main-video.webm" type="video/webm">
 											</video>
@@ -345,7 +345,7 @@
 										</div>
 									</a>
 									<a class="services-cases__content-item" href="./project-detail.html">
-										<video loop preload="auto" muted playsinline>
+										<video loop preload="auto" muted playsinline autoplay>
 											<source src="./assets/video/main-video.mp4" type="video/mp4">
 											<source src="./assets/video/main-video.webm" type="video/webm">
 										</video>
@@ -370,7 +370,7 @@
 										</div>
 									</a>
 									<a class="services-cases__content-item" href="./project-detail.html">
-										<video loop preload="auto" muted playsinline>
+										<video loop preload="auto" muted playsinline autoplay>
 											<source src="./assets/video/main-video.mp4" type="video/mp4">
 											<source src="./assets/video/main-video.webm" type="video/webm">
 										</video>
