--- a/src/main-map.html
+++ b/src/main-map.html
@@ -783,6 +783,172 @@
 		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDoCgGcCiuHUonTHFpIghnEn-yBXVeFta4&callback=initMap"></script>
 		<script>
 			let map;
+			const styles = [
+				{
+					elementType: "geometry",
+					stylers: [
+						{
+							color: "#f5f5f5",
+						},
+					],
+				},
+				{
+					elementType: "labels.icon",
+					stylers: [
+						{
+							visibility: "off",
+						},
+					],
+				},
+				{
+					elementType: "labels.text.fill",
+					stylers: [
+						{
+							color: "#616161",
+						},
+					],
+				},
+				{
+					elementType: "labels.text.stroke",
+					stylers: [
+						{
+							color: "#f5f5f5",
+						},
+					],
+				},
+				{
+					featureType: "administrative.land_parcel",
+					elementType: "labels.text.fill",
+					stylers: [
+						{
+							color: "#bdbdbd",
+						},
+					],
+				},
+				{
+					featureType: "poi",
+					elementType: "geometry",
+					stylers: [
+						{
+							color: "#eeeeee",
+						},
+					],
+				},
+				{
+					featureType: "poi",
+					elementType: "labels.text.fill",
+					stylers: [
+						{
+							color: "#757575",
+						},
+					],
+				},
+				{
+					featureType: "poi.park",
+					elementType: "geometry",
+					stylers: [
+						{
+							color: "#e5e5e5",
+						},
+					],
+				},
+				{
+					featureType: "poi.park",
+					elementType: "labels.text.fill",
+					stylers: [
+						{
+							color: "#9e9e9e",
+						},
+					],
+				},
+				{
+					featureType: "road",
+					elementType: "geometry",
+					stylers: [
+						{
+							color: "#ffffff",
+						},
+					],
+				},
+				{
+					featureType: "road.arterial",
+					elementType: "labels.text.fill",
+					stylers: [
+						{
+							color: "#757575",
+						},
+					],
+				},
+				{
+					featureType: "road.highway",
+					elementType: "geometry",
+					stylers: [
+						{
+							color: "#dadada",
+						},
+					],
+				},
+				{
+					featureType: "road.highway",
+					elementType: "labels.text.fill",
+					stylers: [
+						{
+							color: "#616161",
+						},
+					],
+				},
+				{
+					featureType: "road.local",
+					elementType: "labels.text.fill",
+					stylers: [
+						{
+							color: "#9e9e9e",
+						},
+					],
+				},
+				{
+					featureType: "transit.line",
+					elementType: "geometry",
+					stylers: [
+						{
+							color: "#e5e5e5",
+						},
+					],
+				},
+				{
+					featureType: "transit.station",
+					elementType: "geometry",
+					stylers: [
+						{
+							color: "#eeeeee",
+						},
+					],
+				},
+				{
+					featureType: "water",
+					elementType: "geometry",
+					stylers: [
+						{
+							color: "#c9c9c9",
+						},
+					],
+				},
+				{
+					featureType: "water",
+					elementType: "labels.text.fill",
+					stylers: [
+						{
+							color: "#9e9e9e",
+						},
+					],
+				},
+			];
+			const markers = [
+				{
+					title: "Marker",
+					position: { lat: -34.397, lng: 150.644 },
+				},
+			];
 
 			async function initMap() {
 				const { Map } = await google.maps.importLibrary("maps");
@@ -791,6 +957,27 @@
 					center: { lat: -34.397, lng: 150.644 },
 					zoom: 8,
 					disableDefaultUI: true,
+				});
+
+				map.setOptions({ styles });
+
+				const markerIcon = {
+					path: "M36.9634 27.8795C36.9634 32.9003 32.8985 36.9671 27.8656 36.9671C22.7461 36.9671 18.6227 32.7357 18.7901 27.5782C18.9463 22.8001 22.8745 18.9007 27.6563 18.7947C32.7869 18.6747 36.9634 22.789 36.9634 27.8795ZM0 27.8765C0 12.4738 12.4708 0 27.8682 0C43.2767 0 55.7587 12.4738 55.7587 27.8765C55.7587 40.9159 46.8098 51.8556 34.7127 54.9028L27.8189 61L20.8831 54.8657C8.86913 51.7676 0 40.8635 0 27.8765ZM10.0101 27.8765C10.0101 37.7479 18.0031 45.7393 27.8682 45.7393C37.7276 45.7393 45.7485 37.7507 45.7485 27.8765C45.7485 17.9995 37.7304 10.0109 27.8682 10.0109C18.0031 10.0109 10.0101 17.9995 10.0101 27.8765Z",
+					fillColor: "#785B08",
+					fillOpacity: 1,
+					strokeWeight: 0,
+					rotation: 0,
+					scale: 0.7,
+					anchor: new google.maps.Point(20, 43),
+				};
+
+				markers.forEach(({ position, title = "" }) => {
+					new google.maps.Marker({
+						position,
+						title,
+						map,
+						icon: markerIcon,
+					});
 				});
 			}
 
